--- a/index3.html
+++ b/index3.html
@@ -1,59 +1,44 @@
 <!doctype html>
 <html lang="ko">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>승강기 검사기준 적용 시뮬레이터 · 개선판</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>승강기 검사기준 시뮬레이터 · 단순배열 기준</title>
 <style>
-/* 기존 스타일 그대로 유지 */
-:root { --bg:#0b1220; --card:#111b2e; --muted:#9fb0d0; --text:#e7eefc; --green:#19c37d; --red:#ff4d4f; --line:#22314f; --chip:#162545; --shadow: 0 10px 30px rgba(0,0,0,.35); --accent:#7aa2ff; }
+/* 기존 스타일 유지 */
+:root { --bg:#0b1220; --card:#111b2e; --muted:#9fb0d0; --text:#e7eefc; --green:#19c37d; --red:#ff4d4f; --line:#22314f; --chip:#162545; --shadow:0 10px 30px rgba(0,0,0,.35); --accent:#7aa2ff; }
 *{box-sizing:border-box}
-body{margin:0; font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Noto Sans KR", Arial; background: radial-gradient(1200px 600px at 20% 0%, #14234a 0%, var(--bg) 60%); color:var(--text);}
+body{margin:0;font-family:system-ui,-apple-system,"Segoe UI",Roboto,"Noto Sans KR",Arial;background:radial-gradient(1200px 600px at 20% 0%,#14234a 0%,var(--bg) 60%);color:var(--text);}
 .wrap{max-width:1200px;margin:0 auto;padding:22px 16px 70px;}
-header{position:sticky; top:0; z-index:5; background: linear-gradient(180deg, rgba(11,18,32,.98), rgba(11,18,32,.92)); border-bottom:1px solid var(--line); padding:10px 0 12px; backdrop-filter: blur(6px);}
+header{position:sticky;top:0;z-index:5;background:linear-gradient(180deg, rgba(11,18,32,.98), rgba(11,18,32,.92));border-bottom:1px solid var(--line);padding:10px 0 12px;backdrop-filter: blur(6px);}
 h1{margin:0;font-size:18px}
 .sub{margin-top:6px;color:var(--muted);font-size:12px}
-.panel{background: linear-gradient(180deg, rgba(255,255,255,.04), rgba(255,255,255,.02)); border:1px solid var(--line); border-radius:14px; padding:12px; box-shadow: var(--shadow); margin-top:10px;}
-.controls{display:grid; grid-template-columns: 1.3fr .7fr; gap:10px;}
-@media (max-width:900px){ .controls{grid-template-columns:1fr;} }
-label{display:block;font-size:12px;color:var(--muted);margin-bottom:6px}
-input,select,button{width:100%; padding:10px 12px; border-radius:12px; border:1px solid var(--line); background: rgba(10,16,30,.55); color:var(--text);}
-button{cursor:pointer;font-weight:700;background: rgba(22,37,69,.85)}
-button:hover{filter:brightness(1.06)}
-.date-row{display:grid; grid-template-columns: 1fr 1fr; gap:8px;}
-.presets{display:flex; gap:6px; flex-wrap:wrap; margin-top:6px}
-.preset{padding:6px 10px;border-radius:999px;border:1px solid var(--line); background: rgba(22,37,69,.85); font-size:12px; cursor:pointer}
+.panel{background:linear-gradient(180deg, rgba(255,255,255,.04), rgba(255,255,255,.02));border:1px solid var(--line);border-radius:14px;padding:12px;box-shadow:var(--shadow);margin-top:10px;}
+.controls{display:grid;grid-template-columns:1.3fr .7fr;gap:10px;}
+@media(max-width:900px){.controls{grid-template-columns:1fr;}}
+.date-row{display:grid;grid-template-columns:1fr 1fr;gap:8px;}
+.presets{display:flex;gap:6px;flex-wrap:wrap;margin-top:6px}
+.preset{padding:6px 10px;border-radius:999px;border:1px solid var(--line);background: rgba(22,37,69,.85);font-size:12px;cursor:pointer}
 .preset:hover{filter:brightness(1.06)}
-.topics{border:1px solid var(--line); border-radius:12px; padding:8px; max-height:220px; overflow:auto;}
-.search{margin-bottom:8px}
-.topic{display:flex; gap:8px; align-items:flex-start; padding:6px 4px; border-bottom:1px dashed rgba(255,255,255,.08)}
-.topic:last-child{border-bottom:none}
-.topic input{width:auto; margin-top:2px}
-.topic span{font-size:13px}
-.actions{display:flex; gap:8px; margin-top:8px}
-.summary{display:flex; gap:10px; flex-wrap:wrap; margin-top:8px}
-.chip{display:inline-flex; gap:8px; align-items:center; padding:6px 10px; border-radius:999px; background: rgba(22,37,69,.9); border:1px solid var(--line); font-size:12px; color:var(--muted)}
-.grid{display:grid; grid-template-columns: 1fr; gap:12px; margin-top:14px;}
-.card{background: rgba(17,27,46,.72); border:1px solid var(--line); border-radius:14px; padding:12px;}
-.title{font-weight:800; margin-bottom:6px}
-.timeline{display:grid; gap:8px}
-.row{display:grid; grid-template-columns: 140px 1fr; gap:10px; align-items:flex-start}
-.badge{font-size:12px; font-weight:800}
+.grid{display:grid;grid-template-columns:1fr;gap:12px;margin-top:14px;}
+.card{background:rgba(17,27,46,.72);border:1px solid var(--line);border-radius:14px;padding:12px;}
+.title{font-weight:800;margin-bottom:6px}
+.timeline{display:grid;gap:8px}
+.row{display:grid;grid-template-columns:140px 1fr;gap:10px;align-items:flex-start}
+.badge{font-size:12px;font-weight:800}
 .ok{color:var(--green)}
 .no{color:var(--red)}
-.range{color:var(--muted); font-size:12px}
-.text{white-space:pre-wrap; line-height:1.5; font-size:13px}
-footer{margin-top:16px;color:var(--muted);font-size:12px}
+.range{color:var(--muted);font-size:12px}
+.text{white-space:pre-wrap;line-height:1.5;font-size:13px}
+button{cursor:pointer;font-weight:700;background: rgba(22,37,69,.85);padding:10px 12px;border-radius:12px;border:1px solid var(--line);color:var(--text);}
+button:hover{filter:brightness(1.06);}
 </style>
 </head>
 <body>
 <header>
 <div class="wrap">
-<h1>승강기 검사기준 적용 시뮬레이터 · 개선판</h1>
-<div class="sub">
-✔ 항목 다중 선택 · 날짜 프리셋 · 연혁 항상 표시<br>
-✔ 데이터 출처: <b>진호가 직접 전달한 기준 텍스트만</b>
-</div>
+<h1>승강기 검사기준 시뮬레이터 · 단순배열 기준</h1>
+<div class="sub">✔ JSON 배열 기준 직접 처리 · title/text 정상 출력</div>
 </div>
 </header>
 
@@ -61,175 +46,108 @@ footer{margin-top:16px;color:var(--muted);font-size:12px}
 <div class="panel">
 <div class="controls">
 <div>
-<label>검사 항목(주제) — 다중 선택 가능</label>
-<input class="search" id="search" placeholder="항목 검색 (예: 피트, 조명, 환기)" />
-<div class="topics" id="topics"></div>
+<label>검사 항목 — 전체 표시</label>
 </div>
 <div>
 <label>건축허가일</label>
 <div class="date-row">
-<input type="date" id="date" />
-<select id="quick">
-<option value="">빠른 선택</option>
-<option value="2019-03-28">2019-03-28</option>
-<option value="2013-09-15">2013-09-15</option>
-<option value="2004-12-01">2004-12-01</option>
-<option value="1997-08-18">1997-08-18</option>
-</select>
-</div>
+<input type="date" id="date"/>
 <div class="presets">
-<div class="preset" data-d="2019-03-28">2019.3.28 이후</div>
-<div class="preset" data-d="2013-09-15">2013.9.15 이후</div>
-<div class="preset" data-d="2004-12-01">2004.12.1 이후</div>
-<div class="preset" data-d="1997-08-18">1997.8.18 이후</div>
+<div class="preset" data-d="2013-09-15">2013.09.15 이후</div>
+<div class="preset" data-d="2019-03-28">2019.03.28 이후</div>
+</div>
 </div>
 <div class="actions">
 <button id="run">적용 표시</button>
 <button id="reset">초기화</button>
 </div>
-<div class="summary" id="summary"></div>
 </div>
 </div>
 </div>
 
 <div class="grid" id="results"></div>
 
-<footer>
-🟩 = 입력된 건축허가일에 적용 / 🟥 = 미적용<br>
-※ 연혁은 접지 않고 <b>타임라인 형태로 항상 표시</b>
-</footer>
-</div>
+<footer>🟩 = 입력된 건축허가일에 적용 / 🟥 = 미적용</footer>
 
 <script>
-let DATA = {};
+let DATA = [];
 
 fetch('./data/criteria.json')
-  .then(res => res.json())
-  .then(json => {
-    // topic 내부까지 배열로 정리
-    for (const category in json) {
-      if (category === 'meta') continue;
-      for (const topic in json[category]) {
-        let raw = json[category][topic];
-        if (!Array.isArray(raw)) {
-          json[category][topic] = Object.values(raw).filter(Boolean);
-        }
-      }
-    }
-    DATA = json;
-    init();
-  })
-  .catch(err => { console.error(err); alert('기준 데이터를 불러오지 못했습니다.'); });
+.then(res => res.json())
+.then(json => {
+  if (json.criteria && Array.isArray(json.criteria)) {
+    DATA = json.criteria.filter(Boolean); // null 제거
+  }
+  renderResults();
+})
+.catch(err => { console.error(err); alert('기준 데이터를 불러오지 못했습니다.'); });
 
-function isApplied(buildDate, from, to) {
-  if (!buildDate) return false;
+function isApplied(buildDate, from, to){
+  if(!buildDate) return false;
   const b = new Date(buildDate);
   const f = from ? new Date(from) : null;
   const t = to ? new Date(to) : null;
-  if (f && b < f) return false;
-  if (t && b > t) return false;
+  if(f && b<f) return false;
+  if(t && b>t) return false;
   return true;
 }
 
-const topicsEl = document.getElementById('topics');
 const resultsEl = document.getElementById('results');
 const dateEl = document.getElementById('date');
-const quickEl = document.getElementById('quick');
+const presets = document.querySelectorAll('.preset');
 
-function renderTopics() {
-  topicsEl.innerHTML = '';
-  Object.keys(DATA).forEach(category => {
-    if (category === 'meta') return;
-    const h = document.createElement('div');
-    h.className = 'category';
-    h.textContent = category;
-    topicsEl.appendChild(h);
-    Object.keys(DATA[category]).forEach(topic => {
-      const label = document.createElement('label');
-      label.className = 'topic';
-      const cb = document.createElement('input');
-      cb.type = 'checkbox';
-      cb.value = topic;
-      cb.dataset.category = category;
-      cb.addEventListener('change', renderResults);
-      const span = document.createElement('span');
-      span.textContent = topic;
-      label.appendChild(cb);
-      label.appendChild(span);
-      topicsEl.appendChild(label);
-    });
-  });
-}
-
-function renderResults() {
-  resultsEl.innerHTML = '';
-  const checked = document.querySelectorAll('.topic input:checked');
-
-  checked.forEach(cb => {
-    const category = cb.dataset.category;
-    const topic = cb.value;
-    if (!DATA[category] || !DATA[category][topic]) return;
-
-    let items = DATA[category][topic].filter(Boolean); // null 제거
+function renderResults(){
+  resultsEl.innerHTML='';
+  DATA.forEach(item=>{
+    if(!item) return;
 
     const card = document.createElement('div');
-    card.className = 'card';
-    const title = document.createElement('div');
-    title.className = 'title';
-    title.textContent = `${category} / ${topic}`;
-    card.appendChild(title);
+    card.className='card';
+
+    const titleEl = document.createElement('div');
+    titleEl.className='title';
+    titleEl.textContent = item.title || '제목 없음';
+    card.appendChild(titleEl);
 
     const timeline = document.createElement('div');
-    timeline.className = 'timeline';
+    timeline.className='timeline';
 
-    items.forEach(item => {
-      if (!item) return;
+    const badge = document.createElement('div');
+    badge.className='badge';
+    const applied = isApplied(dateEl.value,item.from,item.to);
+    badge.classList.add(applied?'ok':'no');
+    badge.textContent = applied?'🟩 적용':'🟥 미적용';
 
-      const row = document.createElement('div');
-      row.className = 'row';
+    const range = document.createElement('div');
+    range.className='range';
+    range.textContent=`적용 기간: ${item.from||'—'} ~ ${item.to||'현재'}`;
+    badge.appendChild(range);
 
-      const badge = document.createElement('div');
-      badge.className = 'badge';
-      const applied = isApplied(dateEl.value, item.from, item.to);
-      badge.classList.add(applied ? 'ok' : 'no');
-      badge.textContent = applied ? '🟩 적용' : '🟥 미적용';
+    const textEl = document.createElement('div');
+    textEl.className='text';
+    textEl.innerHTML = `<b>${item.label||'기준'}</b><br>${item.text||''}`;
 
-      const range = document.createElement('div');
-      range.className = 'range';
-      range.textContent = `적용 기간: ${item.from || '—'} ~ ${item.to || '현재'}`;
-      badge.appendChild(range);
-
-      const text = document.createElement('div');
-      text.className = 'text';
-      const titleText = item.title || '제목 없음';
-      text.innerHTML = `<b>${titleText}</b><br>${item.text || ''}`;
-
-      row.appendChild(badge);
-      row.appendChild(text);
-      timeline.appendChild(row);
-    });
+    const row = document.createElement('div');
+    row.className='row';
+    row.appendChild(badge);
+    row.appendChild(textEl);
+    timeline.appendChild(row);
 
     card.appendChild(timeline);
     resultsEl.appendChild(card);
   });
 }
 
-// 이벤트 바인딩
-quickEl.addEventListener('change', e => { dateEl.value = e.target.value; renderResults(); });
-document.querySelectorAll('.preset').forEach(p => p.addEventListener('click', () => { dateEl.value = p.dataset.d; renderResults(); }));
-document.getElementById('reset').addEventListener('click', () => { topicsEl.querySelectorAll('input').forEach(i => i.checked = false); resultsEl.innerHTML = ''; });
+// 이벤트
 document.getElementById('run').addEventListener('click', renderResults);
-
-function init() { renderTopics(); }
-
-const searchInput = document.getElementById('search');
-searchInput.addEventListener('input', () => {
-  const keyword = searchInput.value.trim().toLowerCase();
-  document.querySelectorAll('#topics .topic').forEach(row => {
-    const text = row.innerText.toLowerCase();
-    row.style.display = text.includes(keyword) ? '' : 'none';
-  });
+document.getElementById('reset').addEventListener('click', ()=>{
+  dateEl.value='';
+  renderResults();
 });
+presets.forEach(p=>p.addEventListener('click',()=>{
+  dateEl.value=p.dataset.d;
+  renderResults();
+}));
 </script>
 </body>
 </html>
