--- a/index3.html
+++ b/index3.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>승강기 검사기준 시뮬레이터 · 검색 하이라이트</title>
+<title>승강기 검사기준 시뮬레이터 · 최종판</title>
 <style>
 :root { --bg:#0b1220; --card:#111b2e; --muted:#9fb0d0; --text:#e7eefc; --green:#19c37d; --red:#ff4d4f; --line:#22314f; --chip:#162545; --shadow:0 10px 30px rgba(0,0,0,.35); --accent:#7aa2ff; }
 *{box-sizing:border-box}
-body{margin:0;font-family:system-ui,-apple-system,"Segoe UI",Roboto,"Noto Sans KR",Arial;background:radial-gradient(1200px 600px at 20% 0%,#14234a 0%,var(--bg) 60%);color:var(--text);}
+body{margin:0;font-family:system-ui,-apple-system,"Segoe UI",Roboto,"Noto Sans KR",Arial;background:radial-gradient(1200px 600px at 20% 0%,#14234a 0%,var(--bg) 60%);color:var(--text);font-size:14px;}
 .wrap{max-width:1200px;margin:0 auto;padding:22px 16px 70px;}
 header{position:sticky;top:0;z-index:5;background:linear-gradient(180deg, rgba(11,18,32,.98), rgba(11,18,32,.92));border-bottom:1px solid var(--line);padding:10px 0 12px;backdrop-filter: blur(6px);}
 h1{margin:0;font-size:18px}
@@ -19,7 +19,7 @@ label{display:block;font-size:12px;color:var(--muted);margin-bottom:6px}
 input,select,button{width:100%; padding:10px 12px; border-radius:12px; border:1px solid var(--line); background: rgba(10,16,30,.55); color:var(--text);}
 button{cursor:pointer;font-weight:700;background: rgba(22,37,69,.85)}
 button:hover{filter:brightness(1.06)}
-.date-row{display:grid;grid-template-columns:1fr 1fr;gap:8px;}
+.date-row{display:grid;grid-template-columns:1fr auto;gap:8px; align-items:center;}
 .presets{display:flex;gap:6px;flex-wrap:wrap;margin-top:6px}
 .preset{padding:6px 10px;border-radius:999px;border:1px solid var(--line);background: rgba(22,37,69,.85);font-size:12px;cursor:pointer}
 .preset:hover{filter:brightness(1.06)}
@@ -40,18 +40,24 @@ button:hover{filter:brightness(1.06)}
 .text{white-space:pre-wrap;line-height:1.5;font-size:13px}
 input#search{margin-bottom:8px;padding:8px 10px;border-radius:8px;border:1px solid var(--line);background: rgba(10,16,30,.55);color:var(--text);}
 mark{background: yellow; color: black;}
+.text-size-controls{display:flex; gap:6px; margin-bottom:8px;}
 </style>
 </head>
 <body>
 <header>
 <div class="wrap">
 <h1>승강기 검사기준 시뮬레이터</h1>
-<div class="sub">✔ 체크박스 선택 + 검색 하이라이트 + 중복 title 묶음</div>
+<div class="sub">✔ 체크박스 선택 + 검색 + 하이라이트 + 글씨 조절 + 초기화 개선</div>
 </div>
 </header>
 
 <div class="wrap">
 <div class="panel">
+<div class="text-size-controls">
+<button id="increase-font">글씨 크게</button>
+<button id="decrease-font">글씨 작게</button>
+</div>
+
 <label>검사항목 선택</label>
 <div class="topics" id="topics"></div>
 
@@ -60,17 +66,18 @@ mark{background: yellow; color: black;}
 
 <label>건축허가일</label>
 <div class="date-row">
-<input type="date" id="date"/>
+  <input type="date" id="date"/>
+  <div style="display:flex; gap:6px;">
+    <button id="run">적용 표시</button>
+    <button id="reset">초기화</button>
+  </div>
+</div>
+
 <div class="presets">
 <div class="preset" data-d="2013-09-15">2013.09.15 이후</div>
 <div class="preset" data-d="2019-03-28">2019.03.28 이후</div>
 </div>
-</div>
 
-<div class="actions">
-<button id="run">적용 표시</button>
-<button id="reset">초기화</button>
-</div>
 </div>
 
 <div class="grid" id="results"></div>
@@ -80,6 +87,8 @@ mark{background: yellow; color: black;}
 <script>
 let DATA = [];
 let TITLE_MAP = {};
+let currentFontSize = 14;
+const bodyEl = document.body;
 
 const topicsEl = document.getElementById('topics');
 const resultsEl = document.getElementById('results');
@@ -92,7 +101,6 @@ fetch('./data/criteria.json')
 .then(json=>{
   if(json.criteria && Array.isArray(json.criteria)){
     DATA = json.criteria.filter(Boolean);
-    // title로 그룹화
     TITLE_MAP = {};
     DATA.forEach(item=>{
       if(!item.title) return;
@@ -132,7 +140,6 @@ function isApplied(buildDate, from, to){
   return true;
 }
 
-// 검색어 하이라이트 함수
 function highlightText(text, keyword){
   if(!keyword) return text;
   const re = new RegExp(`(${keyword.replace(/[-\/\\^$*+?.()|[\]{}]/g,'\\$&')})`, 'gi');
@@ -145,7 +152,6 @@ function renderResults(keyword=''){
   checked.forEach(title=>{
     const items = TITLE_MAP[title] || [];
     items.forEach(item=>{
-      // 검색 필터
       if(keyword){
         const haystack = `${item.title||''} ${item.label||''} ${item.text||''}`.toLowerCase();
         if(!haystack.includes(keyword.toLowerCase())) return;
@@ -187,12 +193,23 @@ function renderResults(keyword=''){
   });
 }
 
+// 글씨 크기 조절
+document.getElementById('increase-font').addEventListener('click', ()=>{
+  currentFontSize += 1;
+  bodyEl.style.fontSize = currentFontSize + 'px';
+});
+document.getElementById('decrease-font').addEventListener('click', ()=>{
+  currentFontSize = Math.max(10, currentFontSize-1);
+  bodyEl.style.fontSize = currentFontSize + 'px';
+});
+
 // 이벤트
 document.getElementById('run').addEventListener('click',()=> renderResults(searchInput.value));
 document.getElementById('reset').addEventListener('click',()=>{
   dateEl.value='';
   searchInput.value='';
   document.querySelectorAll('#topics input').forEach(cb=>cb.checked=false);
+  renderTopics(); // 검색어 초기화 및 체크박스 모두 표시
   renderResults();
 });
 presets.forEach(p=>p.addEventListener('click',()=>{
